# MESCAL

./: .gitignore
Effects/: Direct2D Effects.jucer
Effects/Builds/VisualStudio2022/: Direct2D Effects.sln
Effects/Source/: Direct2DEdgeDetectionEffect.cpp  Direct2DEdgeDetectionEffect.h  Direct2DEffect.cpp  Direct2DEffect.h  Direct2DEmbossEffect.cpp  Direct2DEmbossEffect.h  Main.cpp  MainComponent.cpp  MainComponent.h
GradientMesh/: GradientMesh.jucer
GradientMesh/Source/: Commander.cpp  Commander.h  ContentComponent.cpp  ContentComponent.h  ControlPointComponent.cpp  ControlPointComponent.h  Controller.cpp  Controller.h  Document.cpp  Document.h  GradientMesh.cpp  GradientMesh.h  GradientMeshEditor.cpp  GradientMeshEditor.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  Main.cpp  Mesher.cpp  Mesher.h  Triangulator.cpp  Triangulator.h
doxygen/: Doxyfile  mainpage.txt
examples/: CMakeLists.txt  MESCAL Examples.sln  UpdateProjects.cmd
examples/ConicGradient/SimpleConicGradient/: SimpleConicGradient.jucer
examples/Effects/: MescalEffects.jucer
examples/GradientMesh/: GradientMesh.jucer
examples/MescalDemo/: MescalDemo.jucer
examples/MescalLookAndFeel/: MescalLookAndFeel.jucer
examples/MeshGradient/: CMakeLists.txt
examples/MeshGradient/SimpleMeshGradient/: CMakeLists.txt  SimpleMeshGradient.jucer  juce
examples/MeshGradient/SimpleMeshGradient/Source/: Main.cpp  SimpleMeshGradient.h
metrics/: Direct2DMetrics.jucer
metrics/Source/: Main.cpp  MetricsContentComponent.h  PipeClient.h  StatTable.h
module/: CMakeLists.txt
module/mescal/: mescal.cpp  mescal.h
(+247 files in other folders)
